[gd_scene load_steps=9 format=3 uid="uid://daxw3bxy5lqcc"]

[ext_resource type="Script" path="res://scenes/Shops/TradingPost.gd" id="1_xdecf"]
[ext_resource type="PackedScene" uid="uid://ck17xbn21yrd0" path="res://prefabs/Dialogue/DialoguePlayer/DialoguePlayer.tscn" id="2_yuh7w"]
[ext_resource type="JSON" path="res://dialogue/Shopkeepers/Oleander.json" id="3_50mok"]
[ext_resource type="Texture2D" uid="uid://cwyxb2ghc4max" path="res://assets/background/quingsterybgs_townhall.png" id="4_almsi"]
[ext_resource type="Texture2D" uid="uid://cryi6b4qb3ifd" path="res://assets/character/talksprites/quingesterynpc_ole_flats.png" id="5_ute2u"]
[ext_resource type="PackedScene" uid="uid://desvgeqvimub7" path="res://prefabs/Dialogue/DialogueBox/ShopBox.tscn" id="6_y1wdc"]
[ext_resource type="PackedScene" uid="uid://cm06xatxch52d" path="res://prefabs/UI/ItemMenu/BuyMenu.tscn" id="7_jxhy3"]
[ext_resource type="PackedScene" uid="uid://bw7q1cc3tci2i" path="res://prefabs/UI/NavButtons/NavButtons.tscn" id="8_81g58"]

[node name="TownHall" type="Node2D"]
script = ExtResource("1_xdecf")

[node name="DialoguePlayer" parent="." instance=ExtResource("2_yuh7w")]
dialogue_file = ExtResource("3_50mok")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("4_almsi")
centered = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 480.0
offset_right = 960.0
offset_bottom = 540.0
size_flags_vertical = 8

[node name="Character" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("5_ute2u")

[node name="ShopBox" parent="." instance=ExtResource("6_y1wdc")]

[node name="BuyMenu" parent="." instance=ExtResource("7_jxhy3")]
visible = false
offset_right = 960.0
offset_bottom = 540.0

[node name="NavButtons" parent="." instance=ExtResource("8_81g58")]
offset_right = 960.0
offset_bottom = 540.0

[connection signal="pressed" from="NavButtons/NavList/Button1" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="NavButtons/NavList/Button2" to="." method="_on_sell_pressed"]
[connection signal="pressed" from="NavButtons/NavList/Button3" to="." method="_on_talk_pressed"]
[connection signal="pressed" from="NavButtons/NavList/Button4" to="." method="_on_leave_pressed"]

[editable path="ShopBox"]
[editable path="NavButtons"]
